2003-05-24  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* MAINTAINERS: Put myself in as maintainer.

2003-02-26  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* macros2/autogen.sh: set WANT_AUTOCONF_2_5 variable to tell 
	Mandrake autoconf wrapper we want to check if autoconf 2.5x is here..

2003-02-18  Jody Goldberg <jody@gnome.org>

	* configure.in : Don't depend on a file that James just deleted

2002-12-12  Jody Goldberg <jody@gnome.org>

	* macros2/gnome-common.m4 (GNOME_DEBUG_CHECK) : now that autoconf-2.52
	  is a prereq for things the build broke on the use of
	      AC_DEFINE(GNOME_ENABLE_DEBUG) 
	  without the additional arguments.

2001-12-11  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Up to 1.2.4.

2001-09-20 Glynn Foster <glynn.foster@sun.com>

	* macros2/gnome-x-checks.m4: replaced  
	GNOME_PKGCONFIG_CHECK_MODULES with  PKG_CHECK_MODULES

2001-08-02  Michael Meeks  <michael@ximian.com>

	* Version 1.2.3

2001-07-26  Darin Adler  <darin@bentspoon.com>

	* configure.in: Point to the new home of pkgconfig at
	www.freedesktop.org instead of "sourceforce.net" [sic].

2001-07-26  Darin Adler  <darin@bentspoon.com>

	* doc/usage.txt: Point to the new home of pkgconfig at
	www.freedesktop.org.

2001-07-12  Darin Adler  <darin@bentspoon.com>

	* configure.in: Remove AC_ARG_PROGRAM, because AM_INIT_AUTOMAKE
	already takes care of that.

2001-05-22  Darin Adler  <darin@eazel.com>

	* hack-macros/gnome.m4: Add BUILD_INCLUDED_LIBINTL for
	compatibility with the new gettext.
	
2001-04-16  Darin Adler  <darin@eazel.com>

	* gnome-common.spec.in: A cut at updating the spec file now that
	the pkgconfig stuff and support stuff has gone away.

2001-04-14  Martin Baulig  <baulig@suse.de>

	* gnome-common.pc.in, gnome-common-2.0.pc.in: Removed.

	* configure.in: Set version number to 1.2.2.
	(--enable-platform-gnome-2): Removed this command line argument;
	this package is now the same for GNOME 1.x and GNOME 2.0.

	* acinclude.m4: Removed.