@@ -1,4 +1,4 @@
-SUBDIRS = bin macros macros2 doc
+SUBDIRS = bin macros macros2 doc doc-build
 
 EXTRA_DIST = gnome-common.spec
 
