@@ -1,0 +1,3 @@
+Makefile.in
+Makefile
+gnome-doc-common
