@@ -1,0 +1,12 @@
+bin_SCRIPTS = gnome-doc-common
+
+pkgdatadir = $(datadir)/gnome-common/data
+pkgdata_DATA =			\
+	omf.make		\
+	xmldocs.make		
+
+EXTRA_DIST =			\
+	omf.make		\
+	xmldocs.make		\
+	gnome-doc-common.in	\
+	ChangeLog
