@@ -1,0 +1,9 @@
+To automatically include the standard user documentation build files (omf.make
+and xmldocs.make) in you package, set USE_COMMON_DOC_BUILD=yes in autogen.sh
+before calling the macros2/autogen.sh script.
+
+When porting applications across to use this feature, ensure that all of the
+references to xmldocs.make are to $(top_srcdir)/xmldocs.make in the appropriate
+Makefile.am files. Some modules assume that xmldocs.make is in another
+directory (like docs/ or something).
+
